Full copy of scene makes Blender freeze if there is content directly in the master collection #79692

Closed
opened 2020-08-10 18:02:07 +02:00 by Vyacheslav Kobozev · 10 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-09 12:07, hash: 00162e6b7b
Worked: 2,83,4
Caused by eee35ebdfb
b05fa123d7 might also be relevant here

Seems like blender hangs in BKE_id_new_name_validate / check_for_dupid

Exact steps for others to reproduce the error
Move default cube to Scene collection
Try to make full copy of scene.
It happens with custom settings and factory settings too.

2020-08-10_18-58-13.mp4

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-09 12:07, hash: `00162e6b7b` Worked: 2,83,4 Caused by eee35ebdfb b05fa123d7 might also be relevant here Seems like blender hangs in `BKE_id_new_name_validate` / `check_for_dupid` **Exact steps for others to reproduce the error** Move default cube to Scene collection Try to make full copy of scene. It happens with custom settings and factory settings too. [2020-08-10_18-58-13.mp4](https://archive.blender.org/developer/F8766454/2020-08-10_18-58-13.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...

Can confirm, checking...
Member

Caused by eee35ebdfb, seems like it hangs in BKE_id_new_name_validate / check_for_dupid
b05fa123d7 might also be relevant here

Caused by eee35ebdfb, seems like it hangs in `BKE_id_new_name_validate` / `check_for_dupid` b05fa123d7 might also be relevant here
Philipp Oeser changed title from Full copy of scene makes Blender to hang to Full copy of scene makes Blender freeze if there is content directly in the master collection 2020-08-11 10:19:28 +02:00
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

@mont29: Guess this should be solved for 2.90 still?

@mont29: Guess this should be solved for 2.90 still?
Member

Not quite sure how this should work, looking at code here

/* We never duplicate master collections here, but we can still deep-copy their objects and collections. */
collection_new = collection_old;

and then later, we are adding new objects to the new collection [which is the same as the old for a master collection], while looping over it at the same time.

Why are master collections not duplicated? Arent these per scene @mont29?
Sounds weird to have the same collection trying to have both old and new objects in it?

Not quite sure how this should work, looking at code here ``` /* We never duplicate master collections here, but we can still deep-copy their objects and collections. */ collection_new = collection_old; ``` and then later, we are adding new objects to the new collection [which is the same as the old for a master collection], while looping over it at the same time. Why are master collections not duplicated? Arent these per scene @mont29? Sounds weird to have the same collection trying to have both old and new objects in it?
Bastien Montagne self-assigned this 2020-08-11 18:33:26 +02:00

This issue was referenced by d2c150772a

This issue was referenced by d2c150772a432091ac128e0fc01aef3b997e8bfb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79692
No description provided.