Fix T79692: Full copy of scene makes Blender freeze if there is content directly in the master collection.

Old and new collections are the same data in Master collection case
here, so we cannot consider the `gobject` listbase of `collection_old`
as always immutable.